force-app/main/default/objects/Shipment__c/fields/Assigned_Delivery_Agent__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Delivery_Agent__c</fullName>
    <label>Assigned Delivery Agent</label>
    <type>Lookup</type><referenceTo>User</referenceTo><relationshipLabel>Assigned Delivery Agent</relationshipLabel><relationshipName>Assigned_Delivery_Agent</relationshipName>
</CustomField>