force-app/main/default/objects/Shipment__c/fields/Destination__c.field-meta.xml
<CustomField>
    <fullName>Destination__c</fullName>
    <label>Destination</label>
    <type>Text</type><length>255</length>
</CustomField>