force-app/main/default/objects/Shipment__c/fields/Exception_Flag__c.field-meta.xml
<CustomField>
    <fullName>Exception_Flag__c</fullName>
    <label>Exception Flag</label>
    <type>Checkbox</type><default>false</default>
</CustomField>