force-app/main/default/objects/Shipment__c/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <label>Origin</label>
    <type>Text</type><length>255</length>
</CustomField>