force-app/main/default/objects/Shipment__c/fields/Recipient_Contact__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Contact__c</fullName>
    <label>Recipient Contact</label>
    <type>Text</type><length>255</length>
</CustomField>