force-app/main/default/objects/Shipment__c/fields/Recipient_Name__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Name__c</fullName>
    <label>Recipient Name</label>
    <type>Text</type><length>255</length>
</CustomField>