force-app/main/default/objects/Shipment__c/fields/Recipient_Phone__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Phone__c</fullName>
    <label>Recipient Phone</label>
    <type>Text</type><length>40</length>
</CustomField>