force-app/main/default/objects/Shipment__c/fields/Route__c.field-meta.xml
<CustomField>
    <fullName>Route__c</fullName>
    <label>Route</label>
    <type>Lookup</type><referenceTo>Route__c</referenceTo><relationshipLabel>Route</relationshipLabel><relationshipName>Route</relationshipName>
</CustomField>