force-app/main/default/objects/Shipment__c/fields/Shipment_Status__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Status__c</fullName>
    <label>Shipment Status</label>
    <type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>Created</fullName><default>true</default><label>Created</label></value><value><fullName>Scheduled</fullName><default>false</default><label>Scheduled</label></value><value><fullName>Dispatched</fullName><default>false</default><label>Dispatched</label></value><value><fullName>In Transit</fullName><default>false</default><label>In Transit</label></value><value><fullName>Out for Delivery</fullName><default>false</default><label>Out for Delivery</label></value><value><fullName>Delivered</fullName><default>false</default><label>Delivered</label></value><value><fullName>Completed</fullName><default>false</default><label>Completed</label></value><value><fullName>Exception</fullName><default>false</default><label>Exception</label></value></valueSetDefinition></valueSet>
</CustomField>