force-app/main/default/objects/Shipment__c/fields/Status__c.field-meta.xml
        <CustomField>
            <fullName>Status__c</fullName>
            <label>Status</label>
            <type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>Created</fullName><default>false</default><label>Created</label></value>
<value><fullName>Assigned</fullName><default>false</default><label>Assigned</label></value>
<value><fullName>Dispatched</fullName><default>false</default><label>Dispatched</label></value>
<value><fullName>In Transit</fullName><default>false</default><label>In Transit</label></value>
<value><fullName>Out for Delivery</fullName><default>false</default><label>Out for Delivery</label></value>
<value><fullName>Delivered</fullName><default>false</default><label>Delivered</label></value>
<value><fullName>Exception</fullName><default>false</default><label>Exception</label></value>
<value><fullName>Completed</fullName><default>false</default><label>Completed</label></value></valueSetDefinition></valueSet>
        </CustomField>