force-app/main/default/objects/Shipment__c/fields/Tracking_Code__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Code__c</fullName>
    <label>Tracking Code</label>
    <type>Text</type><length>100</length>
</CustomField>